# socketcand-rs

./: Cargo.toml  README.md
examples/: print.py  send.py
socketcand/: Cargo.toml  README.md
socketcand-smoltcp/: Cargo.toml
socketcand-smoltcp/src/: lib.rs  server.rs
socketcand/src/: beacon.rs  lib.rs  wire.rs
src/: lib.rs  parse.rs
