[package]
name = "socketcand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.6", optional = true }
embedded-can = "0.4.1"
heapless = "0.8.0"
nom = { version = "7.1.3", default-features = false }

[features]
defmt = ["dep:defmt", "heapless/defmt-03"]
