[package]
name = "socketcand-smoltcp"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3.8", optional = true }
embedded-can = "0.4.1"
heapless = "0.8.0"
smoltcp = { version = "0.11.0", default-features = false, features = [
    "socket-tcp",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "async",
] }
socketcand = { version = "0.1.0", path = "../socketcand" }

[features]
defmt-03 = ["dep:defmt", "socketcand/defmt-03", "heapless/defmt-03"]
