[package]
name = "socketcand"
description = "Socketcand parser for small systems"
repository = "https://github.com/umi-eng/socketcand-rs"
documentation = "https://docs.rs/socketcand"
readme = "README.md"
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"
categories = ["embedded", "no-std"]

[dependencies]
defmt = { version = "0.3.6", optional = true }
embedded-can = "0.4.1"
heapless = "0.8.0"
nom = { version = "7.1.3", default-features = false }

[features]
defmt-03 = ["dep:defmt", "heapless/defmt-03"]
